Changes to readme and LESS

--- a/presnsr.less
+++ b/presnsr.less
@@ -695,6 +695,30 @@ body {
     #grid.g-6()
 }
 
+.g-7 {
+    #grid.g-7()
+}
+
+.g-8 {
+    #grid.g-8()
+}
+
+.g-9 {
+    #grid.g-9()
+}
+
+.g-10 {
+    #grid.g-10()
+}
+
+.g-11 {
+    #grid.g-11()
+}
+
+.g-12 {
+    #grid.g-12()
+}
+
 // Grid offsets
 
 .go-1 {
@@ -835,7 +859,13 @@ body {
         .go-3,
         .go-4,
         .go-5,
-        .go-6 {
+        .go-6,
+        .go-7,
+        .go-8,
+        .go-9,
+        .go-10,
+        .go-11,
+        .go-12 {
             display: none;
         }
     }
@@ -938,7 +968,13 @@ body {
         .go-3,
         .go-4,
         .go-5,
-        .go-6 {
+        .go-6,
+        .go-7,
+        .go-8,
+        .go-9,
+        .go-10,
+        .go-11,
+        .go-12 {
             display: none;
         }
     }
@@ -1148,7 +1184,13 @@ body {
         .go-3,
         .go-4,
         .go-5,
-        .go-6 {
+        .go-6,
+        .go-7,
+        .go-8,
+        .go-9,
+        .go-10,
+        .go-11,
+        .go-12 {
             display: none;
         }
     }
@@ -1358,7 +1400,13 @@ body {
         .go-3,
         .go-4,
         .go-5,
-        .go-6 {
+        .go-6,
+        .go-7,
+        .go-8,
+        .go-9,
+        .go-10,
+        .go-11,
+        .go-12 {
             display: none;
         }
     }
