--- a/presnsr.less
+++ b/presnsr.less
@@ -845,6 +845,26 @@ body {
         }
     }
 
+    // Responsive across
+
+    .res-g {
+        .fc;
+        .go-1,
+        .go-2,
+        .go-3,
+        .go-4,
+        .go-5,
+        .go-6,
+        .go-7,
+        .go-8,
+        .go-9,
+        .go-10,
+        .go-11,
+        .go-12 {
+            display: none;
+        }
+    }
+
     // Responsive large only
 
     .res-lg-g,
